traces/bug_595.txt
examples++-load/distance.cpp:725: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/distance.cpp:725:1: initialization of callDoLoadInit
723.   }
724.   
725. > LOADFUNC(finit);  //  une variable globale qui serat construite  au chargement dynamique

examples++-load/distance.cpp:725:1: call to DoLoadInit
723.   }
724.   
725. > LOADFUNC(finit);  //  une variable globale qui serat construite  au chargement dynamique

examples++-load/distance.cpp:725:1: call to addInitFunct
  723.   }
  724.   
  725. > LOADFUNC(finit);  //  une variable globale qui serat construite  au chargement dynamique

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
